# GameQt

./: CMakeLists.txt  README.md
GameFourInARow/: CMakeLists.txt  main.qrc
GameFourInARow/src/: ChessAnimation.cpp  ChessAnimation.h  ChessAudio.cpp  ChessAudio.h  ChessBoard.cpp  ChessBoard.h  ChessMan.cpp  ChessMan.h  ChessPlayer.cpp  ChessPlayer.h  ChessScene.cpp  ChessScene.h  ChessView.cpp  ChessView.h  main.cpp
cmake/: qt.cmake
